@@ -6,6 +6,9 @@ Serial
   @octave_serial/fclose
   @octave_serial/flushinput
   @octave_serial/flushoutput
+  @octave_serial/fprintf
+  @octave_serial/fread
+  @octave_serial/fwrite
   @octave_serial/get
   @octave_serial/set
   srl_read
