@@ -1,8 +1,13 @@
 Summary of important user-visible changes for instrument-control 0.4.0+
 -------------------------------------------------------------------
  
-  ** SERIAL: use extended win32 serial name for comports so > 10 work
+  ** SERIAL: use extended win32 serial name for comports so > 10 work.
 
+     Added overload functions for: 
+        fprintf
+        fread
+        fwrite
+ 
   ** minor document updates
 
 Summary of important user-visible changes for instrument-control 0.4.0
